force-app/main/default/objects/Income__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Used to record the income amount</description>
    <inlineHelpText>This is the gross amount</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>