force-app/main/default/objects/Income__c/fields/AmountFrequency__c.field-meta.xml
<CustomField>
    <fullName>AmountFrequency__c</fullName>
    <description>Used to record the frequency that you are paid the amount.</description>
    <label>Amount Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>