force-app/main/default/objects/Income__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to record the related asset</description>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>