force-app/main/default/objects/Income__c/fields/PaidFrequency__c.field-meta.xml
<CustomField>
    <fullName>PaidFrequency__c</fullName>
    <description>Business use: This is the frequency at which you are paid the amount. For example, a person&#39;s full salary amount may be paid over an annual period, but the frequency at which they receive the payment is monthly.</description>
    <label>Paid Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>