force-app/main/default/objects/Income__c/fields/PlatformCreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformCreatedDateTime__c</fullName>
    <description>Used to record the date and time the record was created in finprod
Updated by Nova Service</description>
    <label>Platform created date time</label>
    <type>DateTime</type>
</CustomField>