force-app/main/default/objects/Income__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <description>Used to record the date and time the record was last modified in finprod 
Updated by plan service</description>
    <label>Platform Last Modified Date Time</label>
    <type>DateTime</type>
</CustomField>